<resources>
    <array name="sounds">
        <item>Cheering</item>
        <item>Clapping</item>
        <item>Go Hokies!</item>
    </array>
    <array name="songs">
        <item>Go Tech Go!</item>
        <item>Enter Sandman</item>
        <item>Tech Triumph</item>
    </array>
    <string name="app_name">Hokie Player</string>
    <string name="background">Select your background music:</string>
    <string name="overlap1">Select your first overlap sound:</string>

    <string name="overlap2">Select your second overlap sound:</string>
    <string name="overlap3">Select your third overlap sound:</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="back">Back</string>
    <string name="restart">Restart</string>
    <string name="go_tech">Go Tech Go!</string>
    <string name="enter_sandman">Enter Sandman</string>
    <string name="tech_triumph">Tech Triumph</string>
    <string name="content_disc">
        Image representing current sound.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>